k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: unilever-poc
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
